# canvasflow

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  docx_content.txt  eslint.config.js  extract_docx.ps1  extract_pdf.cjs  extract_pdf.mjs  extract_pdf2.cjs  extract_pdf3.cjs  generate_doc_v2.cjs  generate_doc_v3.cjs  index.html  libtv_pages16-30.txt  libtv_pages31-70.txt  package-lock.json  package.json  playwright.config.ts  read_docx.cjs  read_docx_node.cjs  read_pdf.ps1  run-tauri-dev.cmd  run_extract.ps1  simple_extract.ps1  tauri-dev.bat  test_path.ps1  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml  (+1 more)
docs/: 图片节点设计.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/hermes-knowledge/: README.md
src-tauri/resources/hermes-knowledge/creative/: ai-video-full-pipeline-guide.md  audio-tts-delivery.md  script-beats.md  video-character-motion-prompt.md
src-tauri/resources/hermes-knowledge/models/: seedance-params.md  seedance.md
src-tauri/src/: asset_migration.rs  canvas_asset_backfill.rs  canvas_asset_refs.rs  canvas_mcp_bridge.rs  command_common.rs  compose_concat.rs  db.rs  dreamina_cli.rs  dreamina_gen.rs  graph.rs  lib.rs  main.rs  mcp_stdio.rs  media.rs  project_asset_store.rs  settings.rs  timeline_trim.rs  vault.rs
src-tauri/src/commands/: README.md  assets_cmd.rs  bgm_cmd.rs  canvas_mcp_bridge_cmd.rs  download_cmd.rs  dreamina_cmd.rs  file_cmd.rs  generic_api_cmd.rs  graph_cmd.rs  hermes_cmd.rs  hermes_knowledge_cmd.rs  hermes_mcp_cmd.rs  media_gen_cmd.rs  mod.rs  project_cmd.rs  prompt_reverse_cmd.rs  runs_cmd.rs  script_document_cmd.rs  settings_cmd.rs  timeline_cmd.rs  types.rs  video_cmd.rs  video_mock_cmd.rs  video_tools_cmd.rs
src-tauri/src/db/: README.md
src-tauri/src/executor/: asset_resolve.rs  engine.rs  ffmpeg.rs  graph_flow.rs  hermes_agent.rs  hermes_asset.rs  llm.rs  mod.rs  node_output.rs  script_character_arc.rs  script_decision.rs  script_dialogue_rewrite.rs  script_draft_coherence.rs  script_node.rs  script_parse.rs  script_parse_plan.rs  script_parse_requirement.rs  script_pipeline.rs  script_plan_agent.rs  script_shot_agent.rs  shared.rs  tests.rs  types.rs
src-tauri/src/hermes_knowledge/: mod.rs
src-tauri/src/media/: README.md
src-tauri/src/providers/: README.md
src-tauri/src/services/: README.md
src-tauri/tests/: graph_integration_mock_llm.rs
(+1453 files in other folders)
