[package]
name = "canvasflow"
version = "0.2.0"
description = "CanvasFlow AI Studio - AI-powered video creation with infinite canvas workflow"
authors = ["CanvasFlow"]
license = "Apache-2.0"
repository = "https://github.com/tianshi8306-crypto/canvasflow"
readme = "../README.md"
keywords = ["ai", "video", "canvas", "tauri", "workflow"]
categories = ["multimedia", "graphics", "video"]
edition = "2021"

[lib]
name = "canvasflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
keyring = "3"
base64 = "0.22"
imagesize = "0.13"
zip = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
